# MoMo-Shadow

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-image.yml
config/: shadow.example.yml
deploy/: install.sh  quickstart.sh  shadow.service
deploy/image/: README.md  build-image.sh
deploy/image/stage-shadow/: EXPORT_IMAGE  prerun.sh
deploy/image/stage-shadow/00-install-deps/: 00-packages
deploy/image/stage-shadow/01-install-shadow/: 00-run-chroot
deploy/image/stage-shadow/02-configure/: 00-run-chroot
docs/: API.md  CHANGELOG.md  HARDWARE.md  OPERATIONS.md
src/shadow/: __init__.py  cli.py  config.py  main.py
src/shadow/core/: __init__.py  capture.py  deauth.py  hopper.py  scanner.py
src/shadow/hardware/: __init__.py  battery.py  power.py
src/shadow/network/: __init__.py  ap.py  manager.py  nexmon.py
src/shadow/storage/: __init__.py  database.py  export.py
src/shadow/ui/: __init__.py  epaper.py
src/shadow/web/: __init__.py  server.py
