[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momo-shadow"
version = "0.1.0"
description = "Stealth WiFi/BLE recon device with e-Paper display for Red Team operations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MoMo Team"}
]
keywords = ["security", "red-team", "wifi", "recon", "raspberry-pi", "e-paper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "scapy>=2.5.0",
    "pillow>=10.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "spidev>=3.6;platform_system=='Linux'",
    "RPi.GPIO>=0.7.1;platform_system=='Linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
shadow = "shadow.cli:main"
momo-shadow = "shadow.cli:main"

[project.urls]
Homepage = "https://github.com/M0M0Sec/MoMo-Shadow"
Documentation = "https://github.com/M0M0Sec/MoMo-Shadow/docs"
Repository = "https://github.com/M0M0Sec/MoMo-Shadow"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=shadow --cov-report=term-missing"

